maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:81: error: not found: value effaceIndication
    effaceIndication(posX, posY-1)
    ^